# crewai_bot

./: README.md  pyproject.toml
only_bot/: README.md  requirements.txt
only_bot/src/: api.py  ecosystem.config.js
only_bot/src/crewai_fastapi_agent_chat/: crew.py
only_bot/src/crewai_fastapi_agent_chat/config/: agents.yaml  tasks.yaml
only_bot/src/crewai_fastapi_agent_chat/notifications/: mail_trigger.py
src/crewai_fastapi_agent_chat/notifications/: whatsapp_trigger.py
src/crewai_fastapi_agent_chat/tools/: custom_tool.py
