[project]
name = "crewai_fastapi_agent_chat"
version = "0.1.0"
description = "crewai_fastapi_agent_chat using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
crewai_fastapi_agent_chat = "crewai_fastapi_agent_chat.main:run"
run_crew = "crewai_fastapi_agent_chat.main:run"
train = "crewai_fastapi_agent_chat.main:train"
replay = "crewai_fastapi_agent_chat.main:replay"
test = "crewai_fastapi_agent_chat.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
